--- a/resources/specialized-reports/06-10-26/Chronological_Events_Analysis_2025-04-21.html
+++ b/resources/specialized-reports/06-10-26/Chronological_Events_Analysis_2025-04-21.html
@@ -285,7 +285,7 @@
   <!-- Summary Section (for all report types) -->
   <section class="summary-section">
     <h2>Summary</h2>
-    This report provides a chronological analysis of key global events occurring on April 21, 2025. The analysis spans geopolitical tensions, economic shifts, technological advancements, and humanitarian crises, offering a play-by-play account of unfolding developments. Key themes include the fragile state of ceasefires in Ukraine and Gaza, the implications of Trump-era trade policies, the rise of AI and its ethical considerations, and escalating humanitarian concerns such as the drug epidemic in Guinea and sex tourism in Japan. The report aims to provide a clear understanding of how these events unfolded and contributed to broader global patterns.
+    This report provides a chronological analysis of key events occurring on April 21, 2025, based on available intelligence. The analysis focuses on geopolitical tensions, economic shifts, technological advancements, and humanitarian concerns. Key themes include the ongoing conflict in Ukraine, US-China relations, and emerging trends in AI and military technology. Several events point to a world increasingly shaped by great power competition and domestic political polarization.
   </section>
 
   <!-- Main Content Section - Flexible based on report type -->
@@ -295,72 +295,48 @@
       <div class="timeline-item">
         <span class="timeline-date">Early Morning</span>
         <div class="timeline-content">
-          <h3>Ukraine War: Easter Truce Skepticism</h3>
-          <p>Reports surfaced highlighting skepticism surrounding Putin's proposed Easter truce in Ukraine. Zelenskyy stated that Russian attacks were ongoing despite the announced ceasefire. Russia countered, claiming Ukraine had violated the truce multiple times. This event is significant as it demonstrates the lack of trust between the warring parties and the fragility of diplomatic efforts to de-escalate the conflict. The continued violations undermine any potential for peaceful resolution and prolong the humanitarian crisis.</p>
-          <p>Source: <a href="https://www.bbc.com/news/articles/cy70vj2eejzo" target="_blank">BBC News</a>, <a href="https://www.channelnewsasia.com/world/zelenskyy-says-russian-attacks-ongoing-putin-easter-truce-5076606" target="_blank">Channel News Asia</a></p>
+          <h3>Ukraine War: Ceasefire Violations and Skepticism</h3>
+          <p>Reports surfaced indicating that the Easter truce between Russia and Ukraine was fragile, with both sides accusing each other of violations. This underscores the deep distrust between the parties and the difficulty in achieving a lasting peace. The situation is further complicated by conflicting narratives and a lack of faith in diplomatic negotiations, suggesting that the conflict remains far from a resolution.</p>
         </div>
       </div>
 
       <div class="timeline-item">
         <span class="timeline-date">Mid-Morning</span>
         <div class="timeline-content">
-          <h3>Gaza Conflict: Ceasefire Attempts and Escalating Tensions</h3>
-          <p>Türkiye's top diplomat engaged in discussions with Hamas regarding ceasefire attempts in Gaza. Simultaneously, Qatar's chief negotiator expressed frustration with the slow pace of Gaza talks. Netanyahu affirmed that Israel would not end the Gaza war until hostages were returned and Hamas was destroyed. These events highlight the ongoing efforts to mediate a ceasefire, but also the significant obstacles to achieving a lasting peace. The continued violence exacerbates the humanitarian crisis in Gaza.</p>
-          <p>Source: <a href="https://www.hurriyetdailynews.com/turkiyes-top-diplomat-hamas-discuss-attempts-for-ceasefire-in-gaza-208255" target="_blank">Hurriyet Daily News</a>, <a href="https://www.yahoo.com/news/qatars-chief-negoitator-says-frustrated-081005040.html" target="_blank">Yahoo News</a></p>
+          <h3>US-Iran Relations: Nuclear Ambitions and Negotiations</h3>
+          <p>Indirect negotiations continued between the US and Iran over Tehran's nuclear program and US sanctions, with reports of some progress but also significant skepticism. The potential for a deal hinges on realistic demands and constructive engagement from both sides, but the threat of military action adds complexity. This situation remains a critical point of concern due to the potential for escalation and regional instability.</p>
         </div>
       </div>
 
       <div class="timeline-item">
         <span class="timeline-date">Late Morning</span>
         <div class="timeline-content">
-          <h3>US-Iran Relations: Indirect Negotiations</h3>
-          <p>Reports indicated that Iran and the US held a second round of indirect negotiations. While progress was reported, caution remained. An Iranian Lawmaker stated that Russia and China were to discuss guarantees on the Iran Deal with the US. These negotiations are crucial for regional stability and nuclear non-proliferation efforts. However, skepticism and shifting alliances continue to influence the outcome.</p>
-          <p>Source: <a href="https://www.globalsecurity.org/wmd/library/news/iran/2025/iran-250419-irna04.htm" target="_blank">GlobalSecurity.org</a>, <a href="https://www.globalsecurity.org/wmd/library/news/iran/2025/iran-250419-sputnik01.htm" target="_blank">GlobalSecurity.org</a></p>
+          <h3>US-South Korea Trade Consultations</h3>
+          <p>South Korea and the United States prepared to hold trade talks amid renewed threats of tariffs. South Korea's willingness to discuss trade barriers demonstrates its desire to maintain stable relations in the face of global economic uncertainty, but the potential for renewed tariffs threatens economic stability. This event highlights the impact of US trade policies on its allies' economic strategies.</p>
         </div>
       </div>
 
       <div class="timeline-item">
-        <span class="timeline-date">Early Afternoon</span>
-        <div class="timeline-content">
-          <h3>Crackdown on Journalists in Belarus</h3>
-          <p>News emerged about an incessant crackdown in Belarus, resulting in dozens of independent journalists being imprisoned under Lukashenko's authoritarian regime. This event underscores the suppression of freedom of the press and raises concerns about human rights violations. The crackdown further isolates Belarus internationally and hinders democratic development.</p>
-          <p>Source: <a href="https://abcnews.go.com/International/wireStory/incessant-crackdown-belarus-hurls-dozens-independent-journalists-harsh-120985664" target="_blank">ABC News</a></p>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <span class="timeline-date">Mid-Afternoon</span>
+        <span class="timeline-date">Afternoon</span>
         <div class="timeline-content">
           <h3>Rising Military Influence in Indonesia</h3>
-          <p>Reports highlighted alarm bells in Indonesia over the rising military role. Activists expressed concerns about President Prabowo Subianto's first six months in power and increased threats faced by reporters. This development raises concerns about a potential return to authoritarianism, impacting democratic institutions and economic stability.</p>
-          <p>Source: <a href="https://www.ibtimes.com/pandoras-box-alarm-bells-indonesia-over-rising-military-role-3770687" target="_blank">International Business Times</a></p>
+          <p>Reports emerged raising concerns about the increasing role of the military in Indonesia's government, sparking fears of a return to authoritarianism. Activists worry about the erosion of democratic institutions, threats to reporters, and the potential for human rights abuses. These developments highlight the challenges of maintaining democratic governance in the face of military influence and economic pressures.</p>
         </div>
       </div>
 
       <div class="timeline-item">
         <span class="timeline-date">Late Afternoon</span>
         <div class="timeline-content">
-          <h3>Developments in Space Exploration</h3>
-          <p>The Soyuz MS-26 spacecraft brought a US and Russia crew back to Earth, marking continued international collaboration in space despite geopolitical tensions. ISRO prepared for a stellar summer, with Shubhanshu Shukla preparing to go to the ISS in May. This demonstrates the importance of shared interest and accomplishment in space exploration.</p>
-          <p>Source: <a href="https://www.aljazeera.com/news/2025/4/20/soyuz-ms-26-spacecraft-brings-us-russia-crew-back-to-earth" target="_blank">Al Jazeera</a>, <a href="https://economictimes.indiatimes.com/news/new-updates/isro-ready-for-stellar-summer-as-shubhanshu-shukla-prepares-to-go-to-iss-in-may-worlds-most-expensive-satellite-set-to-map-earth-in-june/articleshow/120450289.cms" target="_blank">Economic Times</a></p>
+          <h3>Developments in AI and Military Technology</h3>
+          <p>Advancements in military technology, including the development of drone aircraft carriers, signal a shift towards unmanned warfare. This raises ethical and strategic questions about the use of autonomous weapons systems and the potential impact on the balance of power. Furthermore, AI is continuing its integration in various sectors, including healthcare and cybersecurity, raising ethical concerns regarding data privacy and job displacement.</p>
         </div>
       </div>
 
       <div class="timeline-item">
         <span class="timeline-date">Evening</span>
         <div class="timeline-content">
-          <h3>AI Ethics and Concerns</h3>
-          <p>Google issued a significant warning about the need to prepare for the advent of Artificial General Intelligence (AGI). The rapid integration of AI into sectors like the legal system and workplace raises critical ethical concerns regarding data privacy, bias, and job displacement. This highlights the need for responsible AI development and deployment that benefits society as a whole.</p>
-          <p>Source: <a href="https://www.geeky-gadgets.com/google-predicts-artificial-general-intelligence-agi-by-2030/" target="_blank">Geeky Gadgets</a></p>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <span class="timeline-date">Night</span>
-        <div class="timeline-content">
-          <h3>Growing 'Sex Tourism' In Japan</h3>
-          <p>Reports indicated that social media is helping fuel a growing 'sex tourism' industry in Japan. This raises concerns about exploitation and human trafficking, highlighting the need for stricter regulations and law enforcement to protect vulnerable individuals.</p>
-          <p>Source: <a href="https://www.ibtimes.com/social-media-helps-fuel-growing-sex-tourism-japan-3770688" target="_blank">International Business Times</a></p>
+          <h3>US Policy on Tariffs and Trade with China</h3>
+          <p>The Trump administration's trade policies continued to impact global corporations, leading to increased costs and supply chain adjustments. The US is attempting to restrict China's access to advanced computer chips, but analysts warn this strategy could backfire, potentially fueling innovation within China and enabling them to become a dominant player in the semiconductor market. This highlights the complex interplay of economic and strategic interests in US-China relations.</p>
         </div>
       </div>
     </div>
@@ -369,7 +345,7 @@
   <!-- Implications Section (optional) -->
   <section class="content-section">
     <h2>Implications & Significance</h2>
-    The events of April 21, 2025, paint a complex picture of a world grappling with persistent conflicts, evolving geopolitical dynamics, rapid technological advancements, and pressing humanitarian challenges. The fragility of ceasefires in Ukraine and Gaza underscores the difficulty of achieving lasting peace in these regions, while the rise of authoritarianism in Belarus and Indonesia highlights the ongoing struggle for democracy and human rights. The advancements in AI and space exploration offer potential benefits for society, but also raise ethical and security concerns that require careful consideration. Finally, the humanitarian crises in Guinea and Japan serve as a reminder of the urgent need for international cooperation and support to address these challenges.
+    <p>The events of April 21, 2025, reveal a world grappling with interconnected challenges. Geopolitical tensions, particularly in Ukraine and the Middle East, remain high, impacting global stability. Economic policies, such as US trade tariffs, continue to create uncertainty for businesses and consumers. Technological advancements, especially in AI and military technology, raise ethical and strategic concerns that require careful consideration. Finally, the rising influence of reactionary movements and democratic backsliding in various countries pose a threat to global cooperation and human rights. These trends underscore the need for proactive diplomacy, ethical technology governance, and a commitment to democratic values.</p>
   </section>
 
   <!-- Category Label -->
