--- a/resources/specialized-reports/06-10-26/Future_Scenario_Planning_2025-04-21.html
+++ b/resources/specialized-reports/06-10-26/Future_Scenario_Planning_2025-04-21.html
@@ -170,126 +170,150 @@
   <!-- Summary Section (for all report types) -->
   <section class="summary-section">
     <h2>Summary</h2>
-    This report outlines three plausible future scenarios concerning the evolving relationship between the United States and China, focusing on the trade war, technology restrictions, and geopolitical competition. The scenarios range from continued trade tensions and technological decoupling to a more cooperative relationship driven by mutual economic benefits and global stability concerns. Each scenario is evaluated based on key assumptions, quantifiable indicators, drivers, and potential consequences. The analysis acknowledges the inherent uncertainties in predicting complex geopolitical dynamics while emphasizing data-driven projections.
+    <p>This report outlines three plausible future scenarios concerning the escalating trade and technology competition between the United States and China. These scenarios explore varying degrees of economic decoupling, technological dominance, and geopolitical alignment, offering insights into potential outcomes and key indicators to watch for in the coming years. The analysis emphasizes the interconnectedness of trade policy, technological innovation, and international relations in shaping the future global landscape.</p>
   </section>
-
+  
   <!-- Main Content Section - Flexible based on report type -->
   <section class="content-section">
     <!-- For scenario planning reports -->
     <div class="scenarios">
-      <h2>US-China Relations: Three Plausible Scenarios</h2>
+      <h2>United States - China Trade and Technology Competition: Three Plausible Scenarios</h2>
 
-      <div class="scenario">
-        <h3>Scenario 1: "The Great Decoupling" - Intensified Competition and Technological Divide</h3>
-        <p><b>Description:</b> This scenario envisions a further deterioration of US-China relations, marked by escalating trade wars, stringent technology export controls, and increased geopolitical rivalry. The US, driven by national security concerns and a desire to maintain technological superiority, intensifies efforts to restrict China's access to advanced semiconductors, AI technologies, and other critical components. China, in response, accelerates its efforts to achieve technological self-sufficiency and seeks alternative partnerships to circumvent US restrictions.</p>
-        <p><b>Key Assumptions:</b></p>
-        <ul>
-          <li>The Trump administration maintains a hardline stance on trade and technology with China.</li>
-          <li>National security concerns remain paramount in US policy decisions.</li>
-          <li>China continues to prioritize technological independence and economic self-reliance.</li>
-        </ul>
-        <p><b>Quantifiable Indicators:</b></p>
-        <ul>
-          <li><b>Trade Volume:</b> Decline in bilateral trade between the US and China by 30% over the next two years.</li>
-          <li><b>Technology Exports:</b> Significant reduction in US semiconductor and AI technology exports to China (decrease of at least 50%).</li>
-          <li><b>Investment Flows:</b> Decreased foreign direct investment (FDI) between the two countries (drop of 40%).</li>
-        </ul>
-        <p><b>Drivers:</b></p>
-        <ul>
-          <li>Escalating geopolitical tensions in the South China Sea and Taiwan.</li>
-          <li>Continued accusations of intellectual property theft and cyber espionage.</li>
-          <li>Domestic political pressure in both countries to adopt a tougher stance.</li>
-        </ul>
-        <p><b>Signals:</b></p>
-        <ul>
-          <li>Increased frequency of US sanctions against Chinese companies.</li>
-          <li>Further restrictions on Chinese investments in sensitive US sectors.</li>
-          <li>Acceleration of China's domestic semiconductor production capacity.</li>
-        </ul>
-        <p><b>Potential Consequences:</b></p>
-        <ul>
-          <li>Disruptions to global supply chains and increased costs for consumers.</li>
-          <li>Slower economic growth in both countries and globally.</li>
-          <li>Increased risk of military conflict in the Indo-Pacific region.</li>
-        </ul>
-      </div>
+      <!-- Scenario 1: Controlled Decoupling -->
+      <h3>Scenario 1: Controlled Decoupling</h3>
+      <p><b>Description:</b> The US and China strategically decouple in key sectors like semiconductors and AI, while maintaining trade relations in other areas. This involves reshoring critical industries and establishing alternative supply chains.</p>
+      <p><b>Key Assumptions:</b></p>
+      <ul>
+        <li>The US maintains bipartisan support for strategic decoupling policies.</li>
+        <li>China focuses on self-reliance and develops its domestic technology ecosystem.</li>
+        <li>Global supply chains prove adaptable to the shift.</li>
+      </ul>
+      <p><b>Potential Outcomes:</b></p>
+      <ul>
+        <li>Increased competition in technology sectors, driving innovation.</li>
+        <li>Higher costs for certain goods due to supply chain adjustments.</li>
+        <li>Reduced reliance on China for critical technologies in the US and allied nations.</li>
+        <li>Potential for economic friction and targeted retaliatory measures, but overall trade volume remains significant.</li>
+      </ul>
+      <p><b>Quantifiable Indicators:</b></p>
+      <ul>
+        <li>Percentage of US semiconductor manufacturing reshoring to domestic facilities.</li>
+        <li>Growth rate of China's domestic semiconductor industry.</li>
+        <li>Trade volume between US and China in non-strategic sectors (e.g., agriculture, consumer goods).</li>
+        <li>Investment in alternative supply chains by US companies.</li>
+      </ul>
+      <p><b>Drivers:</b></p>
+      <ul>
+        <li>National security concerns related to technology dependence.</li>
+        <li>Government incentives and subsidies for domestic manufacturing.</li>
+        <li>Geopolitical tensions and concerns over intellectual property theft.</li>
+      </ul>
+      <p><b>Signals:</b></p>
+      <ul>
+        <li>Increased government funding for domestic semiconductor research and manufacturing.</li>
+        <li>New trade agreements between the US and alternative suppliers (e.g., Southeast Asian nations).</li>
+        <li>Announcements of major US companies reshoring manufacturing operations.</li>
+        <li>Continued restrictions on technology exports to China.</li>
+      </ul>
+      <p><b>Potential Consequences:</b></p>
+      <ul>
+        <li>Strengthened US technological competitiveness but potential inflationary pressure.</li>
+        <li>China's accelerated development of indigenous technologies.</li>
+        <li>Geopolitical realignment as countries choose sides in the technology race.</li>
+      </ul>
 
-      <div class="scenario">
-        <h3>Scenario 2: "Managed Competition" - Strategic Balancing and Limited Cooperation</h3>
-        <p><b>Description:</b> This scenario portrays a more nuanced relationship characterized by strategic competition in certain areas (technology, military) and limited cooperation in others (climate change, global health). While the US and China continue to vie for global influence, they also recognize the need to manage their differences and avoid a full-blown confrontation. Trade tensions persist, but both sides seek to mitigate the most damaging effects through targeted exemptions and limited trade agreements.</p>
-        <p><b>Key Assumptions:</b></p>
-        <ul>
-          <li>The US adopts a more pragmatic approach to China, balancing competition with cooperation.</li>
-          <li>Both countries recognize the mutual benefits of limited economic engagement.</li>
-          <li>Global challenges necessitate some level of collaboration.</li>
-        </ul>
-        <p><b>Quantifiable Indicators:</b></p>
-        <ul>
-          <li><b>Trade Volume:</b> Stable bilateral trade with fluctuations within a 10% range.</li>
-          <li><b>Technology Exports:</b> Selective restrictions on technology exports, with exemptions for certain sectors and end-users.</li>
-          <li><b>Climate Agreements:</b> Joint initiatives on renewable energy and emissions reduction.</li>
-        </ul>
-        <p><b>Drivers:</b></p>
-        <ul>
-          <li>Growing awareness of the economic costs of a complete decoupling.</li>
-          <li>Shared interests in addressing global challenges like climate change and pandemics.</li>
-          <li>Desire to maintain regional stability and avoid military escalation.</li>
-        </ul>
-        <p><b>Signals:</b></p>
-        <ul>
-          <li>Periodic high-level dialogues on trade and security issues.</li>
-          <li>Joint statements on climate change and global health initiatives.</li>
-          <li>Continued, albeit limited, military-to-military exchanges.</li>
-        </ul>
-        <p><b>Potential Consequences:</b></p>
-        <ul>
-          <li>Moderate economic growth in both countries.</li>
-          <li>Continued technological innovation, but with separate ecosystems.</li>
-          <li>Reduced risk of military conflict, but persistent geopolitical tensions.</li>
-        </ul>
-      </div>
+      <!-- Scenario 2: Technological Cold War -->
+      <h3>Scenario 2: Technological Cold War</h3>
+      <p><b>Description:</b> The US and China engage in a full-scale technology war, with near-complete decoupling and aggressive competition for global dominance.</p>
+      <p><b>Key Assumptions:</b></p>
+      <ul>
+        <li>Geopolitical tensions escalate significantly.</li>
+        <li>Both countries prioritize technological supremacy over economic cooperation.</li>
+        <li>Access to technology becomes a key tool of foreign policy.</li>
+      </ul>
+      <p><b>Potential Outcomes:</b></p>
+      <ul>
+        <li>Fragmentation of the global technology landscape into two distinct ecosystems.</li>
+        <li>Increased cyber espionage and intellectual property theft.</li>
+        <li>Accelerated development of advanced weapons systems and military technologies.</li>
+        <li>Significant disruptions to global supply chains and economic instability.</li>
+      </ul>
+      <p><b>Quantifiable Indicators:</b></p>
+      <ul>
+        <li>Number of cyberattacks attributed to state-sponsored actors from the US and China.</li>
+        <li>Market share of US and Chinese technology companies in different regions.</li>
+        <li>Investment in military research and development by both countries.</li>
+        <li>Frequency of trade disputes and sanctions between the US and China.</li>
+      </ul>
+      <p><b>Drivers:</b></p>
+      <ul>
+        <li>Deepening mistrust and ideological differences.</li>
+        <li>Perception of existential threat to national security.</li>
+        <li>Desire to control key technologies and set global standards.</li>
+      </ul>
+      <p><b>Signals:</b></p>
+      <ul>
+        <li>Escalating rhetoric and accusations of espionage and sabotage.</li>
+        <li>Increased restrictions on technology exports and investments.</li>
+        <li>Formation of rival technology alliances and standards bodies.</li>
+        <li>Military build-up and increased tensions in strategic regions.</li>
+      </ul>
+      <p><b>Potential Consequences:</b></p>
+      <ul>
+        <li>Increased risk of military conflict and cyber warfare.</li>
+        <li>Slower global economic growth and reduced technological innovation.</li>
+        <li>Greater political polarization and fragmentation of the international order.</li>
+      </ul>
 
-      <div class="scenario">
-        <h3>Scenario 3: "Strategic Partnership" - Enhanced Cooperation and Global Governance</h3>
-        <p><b>Description:</b> This scenario envisages a significant improvement in US-China relations, driven by a shared recognition of the need for global cooperation and a desire to address common challenges. Both countries prioritize economic stability, climate change mitigation, and global health security, leading to enhanced cooperation on trade, technology, and international governance. The US and China actively work together to reform international institutions and promote a more multipolar world order.</p>
-        <p><b>Key Assumptions:</b></p>
-        <ul>
-          <li>A new US administration prioritizes diplomacy and multilateralism.</li>
-          <li>China adopts a more cooperative and responsible approach to global governance.</li>
-          <li>Both countries recognize the mutual benefits of a strong and stable relationship.</li>
-        </ul>
-        <p><b>Quantifiable Indicators:</b></p>
-        <ul>
-          <li><b>Trade Volume:</b> Increased bilateral trade and investment, exceeding pre-trade war levels.</li>
-          <li><b>Technology Collaboration:</b> Joint research and development initiatives in areas like AI and renewable energy.</li>
-          <li><b>Global Governance:</b> Coordinated efforts to reform international institutions and address global challenges.</li>
-        </ul>
-        <p><b>Drivers:</b></p>
-        <ul>
-          <li>Growing recognition of the interconnectedness of the global economy.</li>
-          <li>Shared concerns about climate change and other existential threats.</li>
-          <li>Desire to promote a more stable and equitable world order.</li>
-        </ul>
-        <p><b>Signals:</b></p>
-        <ul>
-          <li>Frequent high-level summits and dialogues.</li>
-          <li>Joint initiatives on climate change, global health, and economic development.</li>
-          <li>Increased cooperation in international organizations like the UN and WHO.</li>
-        </ul>
-        <p><b>Potential Consequences:</b></p>
-        <ul>
-          <li>Stronger global economic growth and stability.</li>
-          <li>Accelerated progress on climate change mitigation and adaptation.</li>
-          <li>More effective responses to global health crises.</li>
-        </ul>
-      </div>
+      <!-- Scenario 3: Multipolar Collaboration -->
+      <h3>Scenario 3: Multipolar Collaboration</h3>
+      <p><b>Description:</b> The US and China find areas of cooperation despite their competition, while other nations emerge as significant players in technology and trade, leading to a more multipolar world.</p>
+      <p><b>Key Assumptions:</b></p>
+      <ul>
+        <li>Both countries recognize the mutual benefits of cooperation on global challenges.</li>
+        <li>Other nations (e.g., EU, India) invest heavily in technology and infrastructure.</li>
+        <li>International institutions play a stronger role in regulating technology and trade.</li>
+      </ul>
+      <p><b>Potential Outcomes:</b></p>
+      <ul>
+        <li>Increased investment in areas like climate change, healthcare, and space exploration.</li>
+        <li>Diversification of global supply chains and reduced dependence on any single nation.</li>
+        <li>Emergence of new technology hubs and innovation ecosystems around the world.</li>
+        <li>More balanced and inclusive global governance structures.</li>
+      </ul>
+      <p><b>Quantifiable Indicators:</b></p>
+      <ul>
+        <li>Number of joint US-China research projects and initiatives.</li>
+        <li>Investment in renewable energy and climate mitigation technologies.</li>
+        <li>Growth rate of technology sectors in countries outside the US and China.</li>
+        <li>Strength of international agreements and regulatory frameworks.</li>
+      </ul>
+      <p><b>Drivers:</b></p>
+      <ul>
+        <li>Recognition of shared global challenges requiring collaboration.</li>
+        <li>Economic incentives for diversification and innovation.</li>
+        <li>Desire for greater autonomy and influence in the international system.</li>
+      </ul>
+      <p><b>Signals:</b></p>
+      <ul>
+        <li>Increased diplomatic engagement and dialogue between the US and China.</li>
+        <li>New international agreements on technology standards and trade practices.</li>
+        <li>Significant investments in research and development by other nations.</li>
+        <li>Strengthening of international institutions and multilateral frameworks.</li>
+      </ul>
+      <p><b>Potential Consequences:</b></p>
+      <ul>
+        <li>More resilient and sustainable global economy.</li>
+        <li>Increased technological innovation and diffusion.</li>
+        <li>More equitable distribution of power and influence in the international system.</li>
+      </ul>
     </div>
   </section>
-
+  
   <!-- Implications Section (optional) -->
   <section class="content-section">
     <h2>Implications & Significance</h2>
-    The future trajectory of US-China relations will have profound implications for the global economy, international security, and the future of global governance. The "Great Decoupling" scenario could lead to a fragmented world order and increased risk of conflict, while the "Strategic Partnership" scenario offers the potential for a more stable and prosperous future. The "Managed Competition" scenario represents a middle ground, balancing the risks and opportunities of engagement. Policymakers and businesses must carefully monitor the indicators and drivers outlined in these scenarios to anticipate future developments and make informed decisions.
+    <p>These scenarios highlight the critical importance of strategic foresight and adaptability in navigating the complex interplay of trade, technology, and geopolitics. Policymakers and business leaders must carefully monitor key indicators and signals to anticipate potential shifts in the global landscape and make informed decisions to protect their interests and promote long-term stability. Furthermore, understanding the underlying assumptions and potential consequences of each scenario is crucial for developing robust and resilient strategies that can withstand uncertainty and capitalize on emerging opportunities. The rise of reactionary international movements and potential for increased authoritarianism, as noted in recent intelligence reports, add layers of complexity requiring careful consideration in all scenarios.</p>
   </section>
 
   <!-- Category Label -->
