--- a/resources/specialized-reports/06-10-26/Counterpoint_Perspectives_Analysis_2025-04-21.html
+++ b/resources/specialized-reports/06-10-26/Counterpoint_Perspectives_Analysis_2025-04-21.html
@@ -7,8 +7,7 @@
   <title>Counterpoint Perspectives Analysis: 2025-04-21</title>
   <style>
     body {
-      font-family: 'Inter', 'Arial', sans-serif;
-      /* Clean, business-like font */
+      font-family: 'Open Sans', 'Segoe UI', sans-serif;
       background: #f9f9f9;
       line-height: 1.6;
       color: #333;
@@ -30,15 +29,13 @@
     h1 {
       font-size: 2em;
       padding-bottom: 0.5em;
-      border-bottom: 2px solid #0E76A8;
-      /* Gamma's color */
+      border-bottom: 2px solid #DD4B39;
       text-align: center;
     }
 
     .category-label {
       display: inline-block;
-      background: #0E76A8;
-      /* Gamma's color */
+      background: #DD4B39;
       color: white;
       padding: 6px 14px;
       border-radius: 4px;
@@ -46,14 +43,13 @@
       margin-bottom: 1.5em;
     }
 
-    /* Agent attribution section */
     .agent-attribution {
       display: flex;
       align-items: center;
       margin-bottom: 2em;
       padding: 0.5em 1em;
-      border-left: 4px solid #0E76A8;
-      background-color: #f0f7fb;
+      border-left: 4px solid #DD4B39;
+      background-color: #FFF5F3;
     }
 
     .agent-avatar {
@@ -79,9 +75,8 @@
     }
 
     .summary-section {
-      background-color: #f3f8fb;
-      /* Light blue-gray for Gamma */
-      border-left: 4px solid #0E76A8;
+      background-color: #FFF5F3;
+      border-left: 4px solid #DD4B39;
       padding: 1.5em;
       margin: 2em 0;
     }
@@ -94,157 +89,171 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
 
-    /* Gamma-specific sections */
-    .market-indicators {
-      width: 100%;
-      border-collapse: collapse;
+    .human-story {
+      background-color: #FFF9F5;
+      border-left: 3px solid #DD4B39;
+      padding: 1.2em;
       margin: 1.5em 0;
+      font-style: italic;
     }
 
-    .market-indicators th {
-      background-color: #0E76A8;
+    .human-story-source {
+      display: block;
+      text-align: right;
+      font-style: normal;
+      font-size: 0.9em;
+      color: #666;
+      margin-top: 0.5em;
+    }
+
+    .timeline {
+      position: relative;
+      max-width: 1200px;
+      margin: 2em 0;
+      padding-left: 2em;
+    }
+
+    .timeline::before {
+      content: '';
+      position: absolute;
+      width: 4px;
+      background-color: #DD4B39;
+      top: 0;
+      bottom: 0;
+      left: 0;
+    }
+
+    .timeline-item {
+      position: relative;
+      margin-bottom: 2em;
+      padding-left: 2em;
+    }
+
+    .timeline-item::before {
+      content: '';
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      left: -9px;
+      background-color: white;
+      border: 4px solid #DD4B39;
+      top: 0;
+      border-radius: 50%;
+      z-index: 1;
+    }
+
+    .timeline-date {
+      position: absolute;
+      left: 2em;
+      top: -5px;
+      background-color: #DD4B39;
       color: white;
-      padding: 10px;
-      text-align: left;
+      padding: 3px 10px;
+      border-radius: 3px;
+      font-size: 0.8em;
     }
 
-    .market-indicators td {
-      padding: 8px 12px;
-      border-bottom: 1px solid #eee;
+    .timeline-content {
+      padding-top: 1.5em;
     }
 
-    .market-indicators .indicator-up {
-      color: #27ae60;
-    }
-
-    .market-indicators .indicator-down {
-      color: #e74c3c;
-    }
-
-    .indicator-neutral {
-      color: #95a5a6;
-    }
-
-    .trend-arrow::after {
-      display: inline-block;
-      margin-left: 5px;
-    }
-
-    .trend-up::after {
-      content: "▲";
-      color: #27ae60;
-    }
-
-    .trend-down::after {
-      content: "▼";
-      color: #e74c3c;
-    }
-
-    .trend-neutral::after {
-      content: "►";
-      color: #95a5a6;
-    }
-
-    .data-visualization {
-      width: 100%;
-      height: 300px;
-      background-color: #f8f9fa;
-      border: 1px solid #e9ecef;
-      border-radius: 4px;
-      margin: 1.5em 0;
+    .perspective-container {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #6c757d;
-    }
-
-    .scenario-container {
+      gap: 20px;
       margin: 2em 0;
     }
 
-    .scenario {
-      border-left: 3px solid #0E76A8;
-      padding: 1em 1.5em;
-      margin-bottom: 1.5em;
-      background-color: #f8f9fa;
+    .perspective {
+      flex: 1;
+      padding: 1.5em;
+      background-color: #FFF9F5;
+      border-radius: 8px;
     }
 
-    .scenario-high {
-      border-left-color: #27ae60;
+    .perspective-a {
+      border-top: 4px solid #DD4B39;
     }
 
-    .scenario-medium {
-      border-left-color: #f39c12;
+    .perspective-b {
+      border-top: 4px solid #7F8C8D;
     }
 
-    .scenario-low {
-      border-left-color: #e74c3c;
+    .perspective h3 {
+      margin-top: 0;
+      color: #444;
     }
 
-    .scenario-title {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 0.8em;
+    .cultural-context {
+      background-color: #F9F9F9;
+      border-left: 4px solid #7F8C8D;
+      padding: 1.2em;
+      margin: 1.5em 0;
     }
 
-    .scenario-probability {
+    .impact-rating {
       display: inline-block;
-      padding: 4px 8px;
-      border-radius: 4px;
-      font-size: 0.8em;
+      padding: 3px 8px;
+      border-radius: 3px;
+      font-size: 0.85em;
       font-weight: bold;
+      margin-right: 10px;
     }
 
-    .probability-high {
+    .high-impact {
+      background-color: rgba(231, 76, 60, 0.2);
+      color: #c0392b;
+    }
+
+    .medium-impact {
+      background-color: rgba(243, 156, 18, 0.2);
+      color: #d35400;
+    }
+
+    .low-impact {
       background-color: rgba(39, 174, 96, 0.2);
       color: #27ae60;
     }
 
-    .probability-medium {
-      background-color: rgba(243, 156, 18, 0.2);
-      color: #f39c12;
-    }
-
-    .probability-low {
-      background-color: rgba(231, 76, 60, 0.2);
-      color: #e74c3c;
-    }
-
-    .resource-allocation {
-      border-top: 1px solid #eee;
-      margin-top: 2em;
-      padding-top: 1em;
-    }
-
-    .comparative-analysis {
-      display: flex;
-      gap: 20px;
+    .key-stakeholders {
       margin: 1.5em 0;
     }
 
-    .comparative-column {
-      flex: 1;
+    .stakeholder {
+      padding: 0.8em;
+      margin-bottom: 0.8em;
       background-color: #f8f9fa;
-      border-top: 3px solid #0E76A8;
-      padding: 1em;
-      border-radius: 4px;
+      border-left: 3px solid #DD4B39;
+    }
+
+    blockquote {
+      font-style: italic;
+      color: #555;
+      border-left: 3px solid #DD4B39;
+      padding-left: 1em;
+      margin-left: 1em;
     }
 
     a {
-      color: #0E76A8;
+      color: #DD4B39;
       text-decoration: none;
     }
 
     a:hover {
       text-decoration: underline;
-      color: #0a5176;
+      color: #c0392b;
     }
 
-    /* Responsive design */
     @media (max-width: 768px) {
-      .comparative-analysis {
+      .perspective-container {
         flex-direction: column;
+      }
+
+      .timeline {
+        padding-left: 1.5em;
+      }
+
+      .timeline-item {
+        padding-left: 1.5em;
       }
     }
   </style>
@@ -255,76 +264,50 @@
   <h1>Counterpoint Perspectives Analysis</h1>
   <p class="date">Date: 2025-04-21</p>
 
-  <!-- Agent Attribution -->
   <div class="agent-attribution">
-    <img src="../../assets/images/gamma_icon.webp" alt="Agent Gamma" class="agent-avatar">
+    <img src="../../assets/images/delta_icon.webp" alt="Agent Delta" class="agent-avatar">
     <div class="agent-info">
-      <span class="agent-name">Agent Gamma</span>
-      <span class="agent-title">Economic & Market Analyst</span>
+      <span class="agent-name">Agent Delta</span>
+      <span class="agent-title">Humanitarian & Social Impact Specialist</span>
     </div>
   </div>
 
-  <!-- Summary Section (for all report types) -->
   <section class="summary-section">
     <h2>Summary</h2>
-    This report analyzes the contrasting perspectives surrounding the increasing influence of Artificial Intelligence (AI) in strategic sectors, particularly focusing on the US-China dynamic and the ethical considerations arising from AI's integration into various aspects of society. The central point of contention revolves around whether the benefits of AI outweigh the potential risks, especially concerning economic competition, security vulnerabilities, and societal implications.
+    This report analyzes the contrasting perspectives surrounding the role of technology, specifically AI and surveillance systems, in modern society. While some view these advancements as essential tools for security and efficiency, others express deep concern about their potential for misuse, privacy violations, and the erosion of civil liberties. This analysis will explore both sides of this debate, highlighting the stakes for individuals, governments, and the future of democratic societies.
   </section>
 
-  <!-- Main Content Section - Flexible based on report type -->
   <section class="content-section">
-    <!-- For deep-dive reports -->
     <div class="deep-dive">
       <h2>Key Analysis</h2>
 
-      <h3>AI's Strategic Importance: A Double-Edged Sword</h3>
-      <p>AI is rapidly transforming strategic sectors like healthcare, cybersecurity, and military applications, driving both opportunities and risks. The core debate centers on whether the potential economic and strategic advantages of AI justify the inherent dangers and ethical dilemmas. Two primary perspectives dominate this discussion:</p>
+      <p>The central point of contention revolves around the balance between security and freedom in the digital age. News reports highlight the increasing use of AI-powered surveillance by law enforcement, the ethical implications of AI in various sectors, and the potential for government overreach in the name of national security. This has sparked a debate between those who prioritize security and those who champion individual rights.</p>
 
-      <h4>Perspective 1: AI as an Economic and Strategic Imperative</h4>
-      <p>Proponents of aggressive AI development argue that it is crucial for maintaining a competitive edge in the global economy and ensuring national security. This view is particularly prominent in the context of the US-China rivalry, where AI dominance is seen as essential for technological leadership. Key arguments include:</p>
-      <ul>
-        <li><b>Economic Growth:</b> AI-driven automation and innovation can boost productivity, create new industries, and enhance overall economic prosperity.</li>
-        <li><b>National Security:</b> AI can enhance military capabilities, improve intelligence gathering, and strengthen cybersecurity defenses.</li>
-        <li><b>Global Competitiveness:</b> Countries that fail to invest in AI risk falling behind in the global race for technological supremacy.</li>
-      </ul>
-      <p>This perspective often downplays or mitigates the potential risks associated with AI, emphasizing the need to accelerate development and deployment to reap its benefits.</p>
+      <div class="perspective-container">
+        <div class="perspective perspective-a">
+          <h3>Perspective A: Technology as a Necessary Security Tool</h3>
+          <p>This perspective emphasizes the importance of technology in maintaining order, preventing crime, and protecting national security. Proponents argue that AI-powered surveillance systems can help law enforcement identify and apprehend criminals, prevent terrorist attacks, and respond effectively to emergencies. They may point to the potential for AI to improve efficiency in various sectors, such as healthcare and cybersecurity, outweighing concerns about privacy. They also believe strong authentication measures, like Aadhaar-based biometrics, are crucial for secure identity verification in an increasingly digital world.</p>
+          <p>They might also argue that responsible AI development and deployment can benefit society as a whole. For instance, AI can assist in border control and immigration processes.</p>
+        </div>
 
-      <h4>Perspective 2: AI's Ethical and Societal Risks</h4>
-      <p>Conversely, critics emphasize the significant ethical and societal risks associated with unchecked AI development. They argue that the potential downsides of AI, such as job displacement, algorithmic bias, and security vulnerabilities, must be addressed proactively. Key concerns include:</p>
-      <ul>
-        <li><b>Job Displacement:</b> Automation driven by AI could lead to widespread job losses, exacerbating income inequality and social unrest.</li>
-        <li><b>Algorithmic Bias:</b> AI systems trained on biased data can perpetuate and amplify existing societal inequalities, leading to discriminatory outcomes.</li>
-        <li><b>Security Vulnerabilities:</b> AI systems are vulnerable to hacking and manipulation, potentially leading to catastrophic consequences in critical infrastructure and defense systems.</li>
-        <li><b>Lack of Regulation:</b> The absence of clear ethical guidelines and regulatory frameworks could result in the misuse of AI and erosion of privacy.</li>
-      </ul>
-      <p>This perspective advocates for a more cautious and regulated approach to AI development, emphasizing the need for ethical frameworks, robust security measures, and proactive risk management.</p>
+        <div class="perspective perspective-b">
+          <h3>Perspective B: Technology as a Threat to Privacy and Freedom</h3>
+          <p>This perspective focuses on the potential dangers of unchecked technological advancement, particularly concerning privacy, civil liberties, and the potential for abuse of power. Critics argue that AI-powered surveillance systems can be used to monitor and control populations, suppress dissent, and discriminate against marginalized groups. They point to the risks of data breaches, identity theft, and the erosion of trust in government and institutions. The use of AI in courtrooms and the workplace raises concerns about bias and job displacement. They may also argue that governments and corporations are collecting and using personal data without adequate transparency or accountability.</p>
+          <p>They also raise concerns about the erosion of democratic norms through political censorship and the weaponization of government institutions.</p>
+        </div>
+      </div>
 
-      <h3>The US-China AI Race: A Focal Point of Contention</h3>
-      <p>The competition between the US and China in AI development intensifies these contrasting perspectives. The US, while acknowledging the importance of AI, grapples with internal debates about ethical oversight and regulatory frameworks. China, on the other hand, appears to prioritize rapid AI advancement, potentially at the expense of ethical considerations and data privacy.</p>
-      <ul>
-        <li><b>US Concerns:</b> The US government and tech industry are wary of China's AI ambitions, particularly its potential for military applications and surveillance. Concerns about intellectual property theft and unfair trade practices further complicate the relationship.</li>
-        <li><b>Chinese Strategy:</b> China's state-led approach to AI development enables massive investments and coordinated efforts, giving it a potential advantage in certain areas. However, this approach also raises concerns about government control and censorship.</li>
-      </ul>
-      <p>The US efforts to restrict chip exports to China, as reported, exemplify this tension. While intended to slow China's AI progress, analysts warn this strategy could backfire, fueling domestic innovation within China and potentially handing them market dominance.</p>
-
-      <h3>The Stakes of the Debate</h3>
-      <p>The stakes of this debate are high, with potential consequences ranging from economic disruption to geopolitical instability. Failure to address the ethical and societal risks of AI could lead to widespread social unrest and erosion of trust in technology. Conversely, overly restrictive regulations could stifle innovation and hinder economic growth.</p>
-      <p>The challenge lies in finding a balance between fostering AI innovation and mitigating its potential risks. This requires collaboration between governments, industry, and civil society to develop ethical frameworks, security standards, and regulatory policies that promote responsible AI development and deployment.</p>
+      <div class="cultural-context">
+        <p>This debate is occurring against a backdrop of increasing geopolitical tensions, economic uncertainty, and social polarization. Concerns about terrorism, cyberattacks, and foreign interference have led to calls for stronger security measures, while anxieties about economic inequality, social injustice, and political corruption have fueled skepticism towards government and corporations. Different cultural values and political ideologies also shape attitudes towards technology and its role in society. In some cultures, there may be a greater emphasis on collective security and social harmony, while in others, individual rights and freedoms may be prioritized.</p>
+      </div>
     </div>
   </section>
 
-  <!-- Implications Section (optional) -->
   <section class="content-section">
     <h2>Implications & Significance</h2>
-    The contrasting perspectives on AI's strategic importance have significant implications for policy-making, investment decisions, and international relations. Key takeaways include:
-    <ul>
-      <li><b>Policy Implications:</b> Governments must develop comprehensive AI strategies that address both the economic and societal dimensions of this technology. This includes investing in AI research and development, promoting ethical guidelines, and establishing regulatory frameworks.</li>
-      <li><b>Investment Decisions:</b> Investors need to carefully assess the risks and opportunities associated with AI investments, considering both the potential for high returns and the ethical implications of AI technologies.</li>
-      <li><b>International Relations:</b> The US-China AI race could reshape the global balance of power, requiring careful diplomacy and strategic alliances to manage potential conflicts and promote cooperation on shared challenges.</li>
-    </ul>
-    Ultimately, the successful integration of AI into society will depend on our ability to navigate these contrasting perspectives and develop a responsible and sustainable approach to AI development.
+    The stakes of this debate are high. A failure to address the ethical and social implications of technology could lead to a society where privacy is an illusion, freedom of expression is curtailed, and power is concentrated in the hands of a few. Conversely, a rejection of technological advancements could hinder efforts to address pressing challenges such as crime, terrorism, and climate change. Finding a balance between these competing interests is essential for ensuring a just, secure, and prosperous future for all. The long-term consequences could impact democratic processes, social cohesion, and the very nature of human experience.
   </section>
 
-  <!-- Category Label -->
   <div class="category-label">Counterpoint Perspectives Analysis</div>
 
 </body>
