--- a/resources/specialized-reports/06-10-26/Historical_Context_Analysis_2025-04-21.html
+++ b/resources/specialized-reports/06-10-26/Historical_Context_Analysis_2025-04-21.html
@@ -7,8 +7,7 @@
   <title>Historical Context Analysis: 2025-04-21</title>
   <style>
     body {
-      font-family: 'Roboto', 'Segoe UI', Arial, sans-serif;
-      /* Modern, technical font */
+      font-family: 'Crimson Text', Georgia, serif;
       background: #f9f9f9;
       line-height: 1.6;
       color: #333;
@@ -25,21 +24,18 @@
       margin-top: 1.5em;
       margin-bottom: 0.8em;
       line-height: 1.3;
-      font-weight: 500;
     }
 
     h1 {
       font-size: 2em;
       padding-bottom: 0.5em;
-      border-bottom: 2px solid #00ACEE;
-      /* Beta's color */
+      border-bottom: 2px solid #3A5998;
       text-align: center;
     }
 
     .category-label {
       display: inline-block;
-      background: #00ACEE;
-      /* Beta's color */
+      background: #3A5998;
       color: white;
       padding: 6px 14px;
       border-radius: 4px;
@@ -47,14 +43,13 @@
       margin-bottom: 1.5em;
     }
 
-    /* Agent attribution div */
     .agent-attribution {
       display: flex;
       align-items: center;
       margin-bottom: 2em;
       padding: 0.5em 1em;
-      border-left: 4px solid #00ACEE;
-      background-color: #f0faff;
+      border-left: 4px solid #3A5998;
+      background-color: #f5f8ff;
     }
 
     .agent-avatar {
@@ -79,15 +74,14 @@
       color: #666;
     }
 
-    .summary-div {
-      background-color: #f0faff;
-      /* Light cyan for Beta */
-      border-left: 4px solid #00ACEE;
+    .summary-section {
+      background-color: #f0f4fb;
+      border-left: 4px solid #3A5998;
       padding: 1.5em;
       margin: 2em 0;
     }
 
-    .content-div {
+    .content-section {
       margin-bottom: 2em;
       background-color: white;
       padding: 1.5em;
@@ -95,112 +89,58 @@
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
 
-    /* Beta-specific divs */
-    .tech-specs {
-      background-color: #f5f7f9;
-      border-left: 3px solid #00ACEE;
+    .historical-context {
+      background-color: #f8f9fa;
+      border-left: 3px solid #3A5998;
       padding: 1.2em;
       margin: 1.5em 0;
-      font-family: 'Consolas', 'Monaco', 'Courier New', monospace;
-      font-size: 0.95em;
-      overflow-x: auto;
     }
 
-    .vulnerability-analysis {
-      margin: 1.5em 0;
-    }
-
-    .vulnerability-item {
-      padding: 0.8em;
-      margin-bottom: 1em;
-      border-radius: 4px;
-      border-left: 4px solid #00ACEE;
-    }
-
-    .severity-high {
-      border-left-color: #e74c3c;
-      background-color: rgba(231, 76, 60, 0.05);
-    }
-
-    .severity-medium {
-      border-left-color: #f39c12;
-      background-color: rgba(243, 156, 18, 0.05);
-    }
-
-    .severity-low {
-      border-left-color: #27ae60;
-      background-color: rgba(39, 174, 96, 0.05);
-    }
-
-    .severity-label {
-      display: inline-block;
-      padding: 3px 8px;
-      border-radius: 3px;
-      font-weight: bold;
-      font-size: 0.85em;
-      margin-right: 8px;
-      color: white;
-    }
-
-    .high {
-      background-color: #e74c3c;
-    }
-
-    .medium {
-      background-color: #f39c12;
-    }
-
-    .low {
-      background-color: #27ae60;
-    }
-
-    .code-block {
-      background: #282c34;
-      color: #abb2bf;
-      padding: 1em;
-      border-radius: 4px;
-      overflow-x: auto;
-      font-family: 'Consolas', 'Monaco', 'Courier New', monospace;
-      font-size: 0.9em;
-      line-height: 1.5;
-    }
-
-    .tech-diagram {
+    .power-dynamics-table {
       width: 100%;
-      padding: 1em;
-      background-color: #fff;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      border-collapse: collapse;
       margin: 1.5em 0;
-      text-align: center;
     }
 
-    .future-tech-div {
-      border-top: 1px solid #eee;
-      margin-top: 2em;
-      padding-top: 1.5em;
+    .power-dynamics-table th {
+      background-color: #3A5998;
+      color: white;
+      text-align: left;
+      padding: 10px;
     }
 
-    .tech-prediction {
-      border-left: 3px solid #00ACEE;
+    .power-dynamics-table td {
+      padding: 8px 10px;
+      border-bottom: 1px solid #eee;
+    }
+
+    .policy-implications {
+      border-left: 3px solid #2c3e50;
       padding-left: 1.2em;
       margin: 1.5em 0;
     }
 
+    .key-quote {
+      font-style: italic;
+      border-left: 2px solid #3A5998;
+      padding-left: 1em;
+      color: #444;
+      margin: 1.5em 0;
+    }
+
     a {
-      color: #00ACEE;
+      color: #3A5998;
       text-decoration: none;
     }
 
     a:hover {
       text-decoration: underline;
-      color: #0077b5;
+      color: #2c4a80;
     }
 
-    /* Responsive design */
     @media (max-width: 768px) {
-      .tech-specs {
-        font-size: 0.85em;
+      .comparison-container {
+        flex-direction: column;
       }
     }
   </style>
@@ -211,68 +151,63 @@
   <h1>Historical Context Analysis</h1>
   <p class="date">Date: 2025-04-21</p>
 
-  <!-- Agent Attribution -->
   <div class="agent-attribution">
-    <img src="../../assets/images/beta_icon.webp" alt="Agent Beta" class="agent-avatar">
+    <img src="../../assets/images/alpha_icon.webp" alt="Agent Alpha" class="agent-avatar">
     <div class="agent-info">
-      <span class="agent-name">Agent Beta</span>
-      <span class="agent-title">Tech & Cyber Intelligence Specialist</span>
+      <span class="agent-name">Agent Alpha</span>
+      <span class="agent-title">Geopolitical Strategist</span>
     </div>
   </div>
 
-  <!-- Summary Section (for all report types) -->
   <section class="summary-section">
     <h2>Summary</h2>
-    <p>This report analyzes the historical context of the rising military influence in Indonesia, as indicated by recent news. It examines the key figures, past events, and long-term trends that contribute to this development, drawing parallels with Indonesia's authoritarian past and considering the implications for its democratic future.</p>
+    <p>This report examines the rising influence of the military in Indonesia under President Prabowo Subianto, providing historical context to understand the current concerns about a potential return to authoritarianism. The analysis explores Indonesia's past experiences with military rule, the key figures involved, and the long-term trends that have shaped the nation's political landscape. By drawing parallels with historical dynamics, this report aims to offer insights into the present situation and potential future trajectories.</p>
   </section>
 
-  <!-- Main Content Section - Flexible based on report type -->
   <section class="content-section">
-    <!-- For deep-dive reports -->
     <div class="deep-dive">
-      <h2>Key Analysis: Rising Military Influence in Indonesia</h2>
-      <div class="content-div">
-        <h3>Historical Background: The "Dwifungsi" Doctrine</h3>
-        <p>To understand the current concerns about the rising military role in Indonesia, it's crucial to examine the concept of "Dwifungsi" (Dual Function), which defined the Indonesian military's (Tentara Nasional Indonesia, TNI) role for decades. Under President Suharto's New Order regime (1966-1998), Dwifungsi legitimized the military's involvement not only in defense and security but also in socio-political affairs. This meant military officers held positions in government, business, and various societal organizations, effectively intertwining military power with civilian life.</p>
+      <h2>Indonesia: Echoes of the Past - Analyzing Rising Military Influence</h2>
+      <p>Recent reports signal a growing role for the military in Indonesia’s government under President Prabowo Subianto, raising alarms among activists and observers. To fully understand the significance of this development, it's crucial to delve into Indonesia's historical relationship with its military and the legacy of authoritarian rule.</p>
 
-        <h3>Key Figures: Prabowo Subianto and the Legacy of the New Order</h3>
-        <p>The figure of Prabowo Subianto is central to this analysis. Prabowo, now President of Indonesia, has a long and controversial history within the TNI, including allegations of human rights abuses during the late New Order period. His association with the New Order regime and his previous political campaigns centered around themes of strong leadership and national stability, raise concerns about a potential return to authoritarian practices. The appointment of military figures to key positions in his administration further fuels these anxieties.</p>
+      <div class="historical-context">
+        <h3>A History of Military Involvement</h3>
+        <p>Indonesia's modern history is deeply intertwined with the military. Following independence in 1949, the nation struggled with political instability and economic challenges. This created an environment where the military gradually expanded its influence, culminating in the rise of General Suharto in the mid-1960s.</p>
+        <p>Suharto's "New Order" regime, which lasted for over three decades, was characterized by a strong military presence in all aspects of Indonesian society. The military played a dominant role in politics, the economy, and even social life. This era was marked by economic development but also by suppression of dissent, human rights abuses, and widespread corruption.</p>
+        <p>Key figures during this period included not only Suharto himself but also prominent military leaders who held significant positions in government and state-owned enterprises. The concept of "dwifungsi" (dual function) formalized the military's role in both defense and socio-political affairs, justifying its extensive involvement in civilian life.</p>
+      </div>
 
-        <h3>Past Events and Long-Term Trends: From Reformasi to Present Day</h3>
-        <p>The fall of Suharto in 1998 ushered in the Reformasi era, a period of democratic transition aimed at dismantling the Dwifungsi doctrine and reducing the military's socio-political influence. Key reforms included separating the police from the military, removing military representation in parliament, and subjecting the military budget to greater civilian oversight. However, the military has never fully relinquished its influence. Long-term trends show a gradual re-emergence of the military in civilian affairs, often justified by concerns about national security, terrorism, and separatism. This trend has been exacerbated by a perceived weakness in civilian institutions and a yearning for stability among some segments of the population.</p>
+      <div class="historical-context">
+        <h3>The Transition to Democracy and its Fragility</h3>
+        <p>The Asian Financial Crisis of 1997-98 triggered widespread protests and ultimately led to Suharto's downfall in 1998. This marked the beginning of Indonesia's transition to democracy, with reforms aimed at reducing the military's political power and promoting civilian control.</p>
+        <p>However, the transition has been uneven and incomplete. While Indonesia has made significant progress in establishing democratic institutions and processes, the military has retained considerable influence, particularly in certain regions and sectors. Long-term trends show a cyclical pattern, with periods of greater civilian control followed by resurgences of military influence, often driven by perceived threats to national security or stability.</p>
+      </div>
 
-        <h3>Historical Analogies and Instructive Lessons</h3>
-        <p>The current situation in Indonesia invites comparisons with other countries that have experienced periods of military rule or significant military influence in politics. For example, the experience of Brazil under its military dictatorship (1964-1985) offers a cautionary tale about the potential for human rights abuses, suppression of dissent, and economic mismanagement. Similarly, the experience of Thailand, with its history of military coups and interventions in politics, highlights the challenges of establishing and maintaining a stable democratic system in the face of powerful military interests.</p>
+      <div class="historical-context">
+        <h3>Prabowo Subianto and the Resurgence</h3>
+        <p>The election of Prabowo Subianto as president in 2024 is a significant development in this context. Prabowo, a former general with a controversial past linked to human rights abuses during the Suharto era, represents a potential shift in the balance of power. His appointment of military figures to key government positions and his rhetoric emphasizing national unity and security have fueled concerns about a return to authoritarian tendencies. Key figures now include not only Prabowo himself but also those military officials he has brought into his administration.</p>
+      </div>
 
-        <h3>Shaping the Current Scenario</h3>
-        <p>The historical dynamics described above have shaped the current scenario in several key ways:</p>
+      <div class="policy-implications">
+        <h3>Potential Implications and Future Trajectories</h3>
+        <p>The increasing military influence under Prabowo's leadership could have several implications:</p>
         <ul>
-          <li><b>Legitimacy of Military Involvement:</b> The legacy of Dwifungsi continues to provide a rationale, at least in some circles, for military involvement in civilian affairs.</li>
-          <li><b>Military Culture and Mindset:</b> The military culture, shaped by decades of political involvement, emphasizes discipline, hierarchy, and national unity, often at the expense of individual liberties and democratic processes.</li>
-          <li><b>Civil-Military Relations:</b> The relationship between the military and civilian government remains a delicate balance, with the potential for the military to exert undue influence, particularly in times of crisis or perceived instability.</li>
-          <li><b>Public Opinion:</b> While many Indonesians value democracy, some also express a desire for strong leadership and stability, creating an opening for the military to play a more prominent role.</li>
+          <li><b>Erosion of Democratic Institutions:</b> The military's growing role in government could weaken civilian institutions and processes, undermining democratic checks and balances.</li>
+          <li><b>Restrictions on Freedom of the Press:</b> Increased threats against reporters, as indicated in recent reports, could stifle independent journalism and limit public access to information.</li>
+          <li><b>Economic Instability:</b> Concerns about a return to authoritarianism could deter foreign investment and hinder economic growth.</li>
+          <li><b>Human Rights Abuses:</b> The military's involvement in internal security operations could lead to human rights violations, particularly in regions with ongoing conflicts or separatist movements.</li>
         </ul>
+
+        <p>Looking ahead, several scenarios are possible. Indonesia could continue on its democratic path, with civilian institutions effectively checking military power. Alternatively, the country could experience a gradual slide back towards authoritarianism, with the military playing an increasingly dominant role in all aspects of society. A third scenario involves a more abrupt shift, potentially triggered by a political crisis or a perceived threat to national security.</p>
       </div>
     </div>
   </section>
 
-  <!-- Implications Section (optional) -->
   <section class="content-section">
     <h2>Implications & Significance</h2>
-    <div class="content-div">
-      <p>The resurgence of military influence in Indonesia has several significant implications:</p>
-      <ul>
-        <li><b>Democratic Backsliding:</b> It could lead to a weakening of democratic institutions, such as parliament, the judiciary, and civil society organizations.</li>
-        <li><b>Human Rights Concerns:</b> It could result in increased restrictions on freedom of expression, assembly, and association, as well as a rise in human rights abuses.</li>
-        <li><b>Economic Instability:</b> It could undermine investor confidence and economic growth, as investors may be wary of political instability and the potential for corruption.</li>
-        <li><b>Regional Security:</b> It could have implications for regional security, as a more authoritarian Indonesia could be less inclined to cooperate with its neighbors on issues such as counter-terrorism and maritime security.</li>
-      </ul>
-      <p>Understanding the historical context of this trend is essential for policymakers, analysts, and civil society actors seeking to promote democracy and human rights in Indonesia.</p>
-    </div>
+    <p>Understanding the historical context of military involvement in Indonesian politics is crucial for assessing the current situation. By recognizing the cyclical nature of civilian-military relations and the potential triggers for authoritarian resurgence, policymakers and observers can better anticipate future developments and work to safeguard Indonesia's democratic gains. The rise of military influence should be monitored closely, with a focus on protecting freedom of the press, strengthening civilian institutions, and promoting human rights.</p>
   </section>
-  <!-- Category Label -->
-  <div class="category-label">Historical Context Analysis</div>
 
+  <div class="category-label">Historical Context Analysis</div>
 </body>
 
 </html>
